k8s/manifest/master.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-work-service
  labels:
    app: home-work-service
  namespace: dev
spec:
  selector:
    app: home-work-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-work-deployment
  labels:
    app: home-work-app
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: home-work-app
  template:
    metadata:
      labels:
        app: home-work-app
    spec:
      containers:
        - name: app
          image: quadro5/home-work:0.4.0
          #imagePullPolicy: Never   # для использования локальных образов
          ports:
          - name: http
            containerPort: 8000
            protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 180
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 180
            periodSeconds: 5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-work-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: home-work-service
            port:
              number: 80
